--- a/Areas/Admin/Views/Category/Create.cshtml
+++ b/Areas/Admin/Views/Category/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Thêm thể loại mới";
 }
-
+<div class="container">
 <h1>Thêm thể loại mới</h1>
 
 <form asp-action="Create" method="post">
@@ -14,3 +14,4 @@
 
     <button type="submit" class="btn btn-primary mt-3">Thêm thể loại</button>
 </form>
+</div>
