--- a/Areas/Admin/Views/Category/Index.cshtml
+++ b/Areas/Admin/Views/Category/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Quản lý thể loại";
 }
-
+<div class="container">
 <h1>Danh sách thể loại</h1>
 
 <div class="text-end">
@@ -52,3 +52,4 @@
     </tbody>
 
 </table>
+</div>
