--- a/Areas/Admin/Views/Product/Create.cshtml
+++ b/Areas/Admin/Views/Product/Create.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Thêm sản phẩm";
 }
+<div class="container">
 <form autocomplete="off" asp-action="Create" enctype="multipart/form-data">
     <div class="container mt-4">
         <h1 class="text-center">Thêm mới sản phẩm</h1>
@@ -38,5 +39,5 @@
         </div>
     </div>
 </form>
-
+</div>
 
