--- a/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Product
-
+<div class="container">
 <form method="post" enctype="multipart/form-data">
     <div class="container mt-4">
         <h1 class="text-center">Chỉnh sửa sản phẩm</h1>
@@ -47,5 +47,5 @@
         </div>
     </div>
 </form>
-
+</div>
 
