--- a/Areas/Admin/Views/Category/Edit.cshtml
+++ b/Areas/Admin/Views/Category/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Sửa thể loại";
 }
-
+<div class="container">
 <h1>Sửa thể loại</h1>
 
 <form asp-action="Edit" method="post">
@@ -15,3 +15,4 @@
 
     <button type="submit" class="btn btn-primary mt-3">Cập nhật thể loại</button>
 </form>
+</div>
