--- a/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Dashboard";
 }
-
+<div class="container">
 <h3>Dashboard</h3>
 
 <!-- Biểu đồ 1 -->
@@ -9,7 +9,7 @@
 
 <!-- Biểu đồ 2 -->
 <canvas id="chart2" width="400" height="200"></canvas>
-
+</div>
 @section Scripts {
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
