--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Quản lý sản phẩm";
 }
+<div class="container">
 <h1>Danh sách sản phẩm</h1>
 
 <div class="text-end mb-3">
@@ -27,7 +28,7 @@
             <tr>
                 <td>@product.Id</td>
                 <td>@product.Name</td>
-                <td>@product.Price.ToString("C")</td>
+                <td>@product.Price.ToString("#,0")</td>
                 <td>@product.Category?.Name</td>
                 <td>
                     @if (!string.IsNullOrEmpty(product.Img))
@@ -47,3 +48,4 @@
         }
     </tbody>
 </table>
+</div>
