--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li class="nav-item">
                             <a asp-action="Index" class="nav-link" asp-controller="Account">Quản lý tài khoản</a>
                         </li>
+                        <li class="nav-item">
+                            <a asp-action="Index" class="nav-link" asp-controller="Order">Quản lý đơn hàng</a>
+                        </li>
                     </ul>
                     <div class="ms-auto">
                         @if (Context.Session.GetString("Username") != null)
@@ -57,7 +60,7 @@
             </div>
         </nav>
 
-        <div class="container mt-4">
+        <div class="mt-4">
             @RenderBody()
         </div>
         <div class="toast-container position-fixed bottom-0 end-0 p-3">
