--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -40,7 +40,8 @@
                             <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
                             <label class="form-check-label" for="form1Example3"> Nhớ tài khoản </label>
                         </div>
-                        <a href="#!">Quên mật khẩu?</a>
+                            <a asp-action="Register" asp-controller="Account">Đăng ký tại đây</a>
+                            <a asp-action="ForgotPassword" asp-controller="Account">Quên mật khẩu?</a>
                     </div>
 
                     <!-- Submit button -->
