--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,50 +7,68 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-purple py-0">
-            <div class="container-fluid my-3">
-                <a class="navbar-brand" href="#">Apple Store</a>
-                <div id="navbarSupportedContent" class="d-flex justify-content-end align-items-center">
-                    <div class="shop-menu pull-right">
-                        <ul class="nav navbar-nav">
+        <nav class="bg-light">
+            <div class="container">
+                <ul class="d-flex justify-content-end align-items-center list-unstyled m-0">
                     @if (Context.Session.GetString("Username") != null)
                     {
-                               <li class="d-flex align-items-center px-3" style="cursor: pointer">
-								<a asp-action="Index" asp-controller="Cart"><i class="fa fa-shopping-cart"></i></a>
-							</li>
-							
-                            <li>
-                                    <div class="d-flex align-items-center" style="cursor: pointer">
-                                        <i class="fa fa-user"></i>
-									<span class="nav-link text-black me-3">
-										Xin chào, @Context.Session.GetString("Username")
-									</span>
-								</div>
-                            </li>
-                                <li class="d-flex align-items-center">
-                                    <a asp-controller="Account" asp-action="Logout" class="btn btn-danger btn-sm" style="cursor: pointer">
-									Đăng xuất
-								</a>
-                            </li>
-                        
-                        }
-                        else
-                        {
-                            <button type="button" class="btn btn-dark">
-                                <a asp-controller="Account" asp-action="Login" class="nav-link text-white">Đăng nhập</a>
-                            </button>
-                        }
-                        </ul>
-                    </div>
-                </div>
+                        <li class="d-flex align-items-center px-3">
+                            <a asp-action="Index" asp-controller="Cart" class="text-dark" style="cursor: pointer;">
+                                <i class="fa fa-shopping-cart"></i>
+                            </a>
+                        </li>
+
+                        <li class="d-flex align-items-center px-3">
+                            <i class="fa fa-user me-2"></i>
+                            <span class="nav-link text-dark">
+                                Xin chào, @Context.Session.GetString("Username")
+                            </span>
+                        </li>
+
+                        <li class="d-flex align-items-center px-3">
+                            <a asp-controller="Account" asp-action="Logout" class="btn btn-danger btn-sm">
+                                Đăng xuất
+                            </a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="d-flex align-items-center px-3">
+                            <a asp-controller="Account" asp-action="Login" class="btn btn-outline-primary">
+                                Đăng nhập
+                            </a>
+                        </li>
+                    }
+                </ul>
             </div>
         </nav>
-
     </header>
-        <main role="main">
+    <nav style="background-color: #ffd700;">
+        <div class="container d-flex justify-content-between">
+			<div class="my-2">
+				<ul class="nav">
+					<li class="nav-item"><a class="nav-link text-black text-decoration-none" asp-controller="Home" asp-action="Index">TRANG CHỦ</a></li>
+					<li class="nav-item"><a class="nav-link text-black text-decoration-none" asp-controller="Product" asp-action="Index"> SẢN PHẨM</a></li>
+					<li class="nav-item"><a class="nav-link text-black text-decoration-none" href="#">VỀ CHÚNG TÔI</a></li>
+					<li class="nav-item"><a class="nav-link text-black text-decoration-none" href="#">LIÊN HỆ</a></li>
+				</ul>
+			</div>
+            <div class="my-2" style="width: 450px">
+				<form class="d-flex" action="/Home/Search" method="get">
+					<input class="form-control me-2" name="keyword" type="search" placeholder="Tìm kiếm ..." aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">
+						<i class="fa-solid fa-magnifying-glass"></i>
+					</button>
+				</form>
+			</div>
+		</div>
+    </nav>
+        <main role="main" class="container">
             @RenderBody()
         </main>
 
