--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,66 +8,171 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
+    <style>
+        .navbar {
+            background-color: #444;
+        }
+
+            .navbar .nav-link, .navbar-brand {
+                color: #fff !important;
+            }
+
+                .navbar .nav-link:hover {
+                    color: #ddd !important;
+                }
+
+            .navbar .dropdown-menu {
+                background-color: #444;
+            }
+
+            .navbar .dropdown-item {
+                color: #fff !important;
+            }
+
+                .navbar .dropdown-item:hover {
+                    background-color: #555;
+                }
+
+        .icon {
+            margin-right: 5px;
+        }
+
+        .carousel-item {
+            height: 500px;
+        }
+
+            .carousel-item img, .carousel-item div {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
+    </style>
 </head>
 <body>
+   
+   
     <header>
-        <nav class="bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <ul class="d-flex justify-content-end align-items-center list-unstyled m-0">
-                    @if (Context.Session.GetString("Username") != null)
-                    {
+                <a class="navbar-brand d-flex align-items-center" href="#">
+
+                    <span>AppleStore</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item"><a class="nav-link" href="#">iPhone</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">iPad</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Mac</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Watch</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Âm thanh</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Phụ kiện</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Máy cũ</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                                Dịch vụ
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Bảo hành</a></li>
+                                <li><a class="dropdown-item" href="#">Sửa chữa</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#">Tin tức</a></li>
+                    </ul>
+                    <ul class="navbar-nav">
                         <li class="d-flex align-items-center px-3">
                             <a asp-action="Index" asp-controller="Cart" class="text-dark" style="cursor: pointer;">
-                                <i class="fa fa-shopping-cart"></i>
+                                <i class="fa fa-shopping-cart" style="font-size: 30px; color:white"></i>
                             </a>
                         </li>
-
-                        <li class="d-flex align-items-center px-3">
-                            <i class="fa fa-user me-2"></i>
-                            <span class="nav-link text-dark">
-                                Xin chào, @Context.Session.GetString("Username")
-                            </span>
+                        <li class="pt-1">
+                            <form class="d-flex" action="/Home/Search" method="get">
+                                <input class="form-control me-2" name="keyword" type="search" placeholder="Tìm kiếm ..." aria-label="Search">
+                                <button class="btn btn-outline-success" type="submit">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </button>
+                            </form>
                         </li>
-
-                        <li class="d-flex align-items-center px-3">
-                            <a asp-controller="Account" asp-action="Logout" class="btn btn-danger btn-sm">
-                                Đăng xuất
+                        <li class="nav-item dropdown pt-1">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                                <i class="fa fa-user me-2"></i>
                             </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Tạo tài khoản ngay</a></li>
+                                <li><a class="dropdown-item" href="#">Đăng nhập tài khoản</a></li>
+                            </ul>
                         </li>
-                    }
-                    else
-                    {
-                        <li class="d-flex align-items-center px-3">
-                            <a asp-controller="Account" asp-action="Login" class="btn btn-outline-primary">
-                                Đăng nhập
-                            </a>
+                        <li>
+                            <img width="48" height="48" src="https://img.icons8.com/color/48/vietnam.png" alt="vietnam" />
                         </li>
-                    }
-                </ul>
+                    </ul>
+                </div>
             </div>
         </nav>
-    </header>
-    <nav style="background-color: #ffd700;">
-        <div class="container d-flex justify-content-between">
-			<div class="my-2">
-				<ul class="nav">
-					<li class="nav-item"><a class="nav-link text-black text-decoration-none" asp-controller="Home" asp-action="Index">TRANG CHỦ</a></li>
-					<li class="nav-item"><a class="nav-link text-black text-decoration-none" asp-controller="Product" asp-action="Index"> SẢN PHẨM</a></li>
-					<li class="nav-item"><a class="nav-link text-black text-decoration-none" href="#">VỀ CHÚNG TÔI</a></li>
-					<li class="nav-item"><a class="nav-link text-black text-decoration-none" href="#">LIÊN HỆ</a></li>
-				</ul>
-			</div>
-            <div class="my-2" style="width: 450px">
-				<form class="d-flex" action="/Home/Search" method="get">
-					<input class="form-control me-2" name="keyword" type="search" placeholder="Tìm kiếm ..." aria-label="Search">
-					<button class="btn btn-outline-success" type="submit">
-						<i class="fa-solid fa-magnifying-glass"></i>
-					</button>
-				</form>
-			</div>
-		</div>
-    </nav>
+        
+    @*     <nav class="bg-light"> *@
+    @*         <div class="container"> *@
+    @*             <ul class="d-flex justify-content-end align-items-center list-unstyled m-0"> *@
+    @*                 @if (Context.Session.GetString("Username") != null) *@
+    @*                 { *@
+    @*                     <li class="d-flex align-items-center px-3"> *@
+    @*                         <a asp-action="Index" asp-controller="Cart" class="text-dark" style="cursor: pointer;"> *@
+    @*                             <i class="fa fa-shopping-cart"></i> *@
+    @*                         </a> *@
+    @*                     </li> *@
+
+    @*                     <li class="d-flex align-items-center px-3"> *@
+    @*                         <i class="fa fa-user me-2"></i> *@
+    @*                         <span class="nav-link text-dark"> *@
+    @*                             Xin chào, @Context.Session.GetString("Username") *@
+    @*                         </span> *@
+    @*                     </li> *@
+
+    @*                     <li class="d-flex align-items-center px-3"> *@
+    @*                         <a asp-controller="Account" asp-action="Logout" class="btn btn-danger btn-sm"> *@
+    @*                             Đăng xuất *@
+    @*                         </a> *@
+    @*                     </li> *@
+    @*                 } *@
+    @*                 else *@
+    @*                 { *@
+    @*                     <li class="d-flex align-items-center px-3"> *@
+    @*                         <a asp-controller="Account" asp-action="Login" class="btn btn-outline-primary"> *@
+    @*                             Đăng nhập *@
+    @*                         </a> *@
+    @*                     </li> *@
+    @*                 } *@
+    @*             </ul> *@
+    @*         </div> *@
+    @*     </nav> *@
+    @* </header> *@
+  @*   <nav style="background-color: #ffd700;"> *@
+  @*       <div class="container d-flex justify-content-between"> *@
+		@* 	<div class="my-2"> *@
+		@* 		<ul class="nav"> *@
+		@* 			<li class="nav-item"><a class="nav-link text-black text-decoration-none" asp-controller="Home" asp-action="Index">TRANG CHỦ</a></li> *@
+		@* 			<li class="nav-item"><a class="nav-link text-black text-decoration-none" asp-controller="Product" asp-action="Index"> SẢN PHẨM</a></li> *@
+		@* 			<li class="nav-item"><a class="nav-link text-black text-decoration-none" href="#">VỀ CHÚNG TÔI</a></li> *@
+		@* 			<li class="nav-item"><a class="nav-link text-black text-decoration-none" href="#">LIÊN HỆ</a></li> *@
+		@* 		</ul> *@
+		@* 	</div> *@
+  @*           <div class="my-2" style="width: 450px"> *@
+		@* 		<form class="d-flex" action="/Home/Search" method="get"> *@
+		@* 			<input class="form-control me-2" name="keyword" type="search" placeholder="Tìm kiếm ..." aria-label="Search"> *@
+		@* 			<button class="btn btn-outline-success" type="submit"> *@
+		@* 				<i class="fa-solid fa-magnifying-glass"></i> *@
+		@* 			</button> *@
+		@* 		</form> *@
+		@* 	</div> *@
+		@* </div> *@
+  @*   </nav> *@
+   </header>
         <main role="main" class="container">
             @RenderBody()
         </main>
@@ -87,11 +192,39 @@
         </div>
     </footer>
     <style>
+        .product-name {
+            display: -webkit-box;
+            -webkit-line-clamp: 2; /* Hiển thị tối đa 2 dòng */
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            font-size: 14px; /* Đặt kích thước font hợp lý */
+            height: 40px; /* Giới hạn chiều cao */
+            line-height: 20px; /* Điều chỉnh chiều cao dòng */
+            margin: 10px 0; /* Tạo khoảng cách giữa tên và giá */
+        }
         .card:hover {
             transform: scale(1.05);
             transition: transform 0.3s ease-in-out;
         }
+
+        .fade-in {
+            opacity: 0;
+            transition: opacity 1s ease-out;
+        }
+
+            .fade-in.visible {
+                opacity: 1;
+            }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 1000,  // Thời gian hiệu ứng (ms)
+            easing: 'ease-in-out', // Cảm giác mượt mà
+            once: true  // Hiệu ứng chỉ diễn ra 1 lần khi phần tử vào viewport
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
