create account manager

--- a/Areas/Admin/Views/Account/Index.cshtml
+++ b/Areas/Admin/Views/Account/Index.cshtml
@@ -2,6 +2,9 @@
 
 <div class="container mt-4">
     <h2 class="text-center mb-4">Danh sách tài khoản</h2>
+    <div class="text-end">
+        <a href="/Admin/Account/Create" class="btn btn-success">Thêm tài khoản quản lý</a>
+    </div>
     <div class="table-responsive">
         <table class="table table-bordered table-striped table-hover align-middle">
             <caption class="text-center">Danh sách tài khoản hiện tại trong hệ thống</caption>
