--- a/Areas/Admin/Views/Product/Create.cshtml
+++ b/Areas/Admin/Views/Product/Create.cshtml
@@ -31,11 +31,21 @@
         </div>
 
         <div class="mb-3">
-            <label for="Information" class="form-label">Thông tin</label>
-            <textarea class="form-control" asp-for="Information" rows="4" required></textarea>
+            @* <label for="Information" class="form-label">Thông tin</label>
+            <textarea class="form-control" asp-for="Information" rows="4" required></textarea> *@                
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title mb-0">Thông tin</h4>
+                    </div>
+
+                    <div class="card-body">
+                        <div class="snow-editor" style="height: 300px;"></div>
+                        <input class="form-control" type="hidden" asp-for="Information" id="content" value="" />
+                    </div>
+                </div>
         </div>
         <div class="form-group">
-            <button class="btn btn-primary">Thêm</button>
+                <button class="btn btn-primary" onclick="customEventEditor()">Thêm</button>
         </div>
     </div>
 </form>
