--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -12,7 +12,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- App favicon -->
     <link rel="shortcut icon" href="@Url.Content("~/images/favicon.ico")">
-
+    <link href="~/libs/quill/quill.core.css" rel="stylesheet" type="text/css" />
+    <link href="~/libs/quill/quill.bubble.css" rel="stylesheet" type="text/css" />
+    <link href="~/libs/quill/quill.snow.css" rel="stylesheet" type="text/css" />
     <!-- jsvectormap css -->
     <link href="@Url.Content("~/libs/jsvectormap/css/jsvectormap.min.css")" rel="stylesheet" type="text/css" />
 
@@ -29,6 +31,8 @@
     <link href="@Url.Content("~/css/app.min.css")" rel="stylesheet" type="text/css" />
     <!-- custom Css-->
     <link href="@Url.Content("~/css/custom.min.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/css/customscreen.css")" rel="stylesheet" type="text/css" />
+    <script src="@Url.Content("~/js/jquery-3.6.3.min.js")"></script>
 </head>
 <body>
     <!-- Begin page -->
@@ -171,13 +175,6 @@
         <i class="ri-arrow-up-line"></i>
     </button>
 
-    <div id="preloader">
-        <div id="status">
-            <div class="spinner-border text-primary avatar-sm" role="status">
-                <span class="visually-hidden">Loading...</span>
-            </div>
-        </div>
-    </div>
     <script>
         window.onload = function() {
             var successMessage = '@TempData["success"]';
@@ -214,7 +211,8 @@
     <script src="@Url.Content("~/libs/feather-icons/feather.min.js")"></script>
     <script src="@Url.Content("~/js/pages/plugins/lord-icon-2.1.0.js")"></script>
     <script src="@Url.Content("~/js/plugins.js")"></script>
-
+    <script src="@Url.Content("~/libs/@ckeditor/ckeditor5-build-classic/build/ckeditor.js")"></script>
+    <script src="@Url.Content("~/libs/quill/quill.min.js")"></script>
     <!-- apexcharts -->
     <script src="@Url.Content("~/libs/apexcharts/apexcharts.min.js")"></script>
 
@@ -223,12 +221,16 @@
     <script src="@Url.Content("~/libs/jsvectormap/maps/world-merc.js")"></script>
 
     <!--Swiper slider js-->
-    <script src="@Url.Content("~//libs/swiper/swiper-bundle.min.js")"></script>
+    <script src="@Url.Content("~/libs/swiper/swiper-bundle.min.js")"></script>
 
     <!-- Dashboard init -->
     <script src="@Url.Content("~/wwwroot/js/pages/dashboard-ecommerce.init.js")"></script>
 
     <!-- App js -->
     <script src="@Url.Content("~/js/app.js")"></script>
+    <script src="@Url.Content("~/js/customstart.js")"></script>
+    <script src="@Url.Content("~/js/pages/form-editor.init.js")"></script>
+    
+    
 </body>
 </html>
